--- a/widget/weather/css/style.css
+++ b/widget/weather/css/style.css
@@ -1,5 +1,5 @@
 #container {
-	width: auto;
+	width: 100%;
     height: 175px;
     color: #eee;
     position: relative;
@@ -179,22 +179,22 @@ p, span, div {
     background: transparent;
     color: #eee;
     position: absolute;
-    width: 260px;
-    height: 142px;
+    width: 100%;
+    height: 141px;
     bottom: 0px;
-    top: 210px;
-    padding-top: 0px; 
+    top: 215px;
+    padding-top: 2px; 
     padding-left: 0px;
     padding-bottom: 0px;
     -webkit-transform-origin: 0 0;
 }
 #errorMessage {
     display: none;
-    background: transparent;
+    background: #151515;
     position: absolute;
-    width: 260px;
-    height: 100px;
-    top: 210px;
+    width: 100%;
+    height: 120px;
+    top: 215px;
     padding-top: 20px;
     -webkit-transform-origin: 0 0;
 }
@@ -202,7 +202,7 @@ p, span, div {
     width: 190px;
     border: 1px solid #333;
     padding: 7px;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
     font-family:"Ubuntu Condensed";
     font-size: 14px;
     outline: none;
@@ -236,9 +236,9 @@ p, span, div {
     /*line-height: 22px;*/
     -webkit-transition: 150ms ease background-color;
     border: 2px solid #222;
-    border-right: 0;
+    border-radius: 20px;
     background-color: #333;
-    cursor: default;
+    cursor: pointer;
 }
 .toggleswitch span.selected, #locationModal .toggleswitch span:hover {
     background-color: #555;
@@ -305,20 +305,24 @@ p, span, div {
     font-size: 0;
     margin-top: 3px;
     display: inline-block;
-    border: 2px solid #333;
+    border: 0px solid transparent;
+    border-radius: 20px;
+    background: transparent;
 }
 .color span {
     height: 14px;
     width: 14px;
     display: inline-block;
-    border: 4px solid rgba(0, 0, 0, 0.4);
+    border-radius:20px;
+    border: 4px solid #222;
+    cursor: pointer;
 }
 span[data-color=gradient] {
     background: -webkit-linear-gradient(#0081d3, #e44211);
     border: 0;
-    height: 22px;
-    width: 22px;
-    border-right: 2px solid #333;
+    height: 14px;
+    width: 14px;
+    border: 4px solid #222;
 }
 /* Credits Button */
  .btn {
