--- a/widget/weather/css/style.css
+++ b/widget/weather/css/style.css
@@ -25,6 +25,9 @@
 	padding: 8px;
 	margin-left: 4px;
 }
+.full {
+	margin-top: 5px;
+}
 p, span, div {
     cursor: default;
 }
@@ -118,20 +121,20 @@ p, span, div {
 }
 .details .left {
     font-size: 38px;
-    width: 50%;
+    width: 38%;
     letter-spacing: -3px;
     text-align: right;
     display: inline-block;
     box-sizing: border-box;
-    padding-right: 0px;
+    margin-left: 0px;
 }
 .details .right {
     font-size: 14px;
     box-sizing: border-box;
     display: inline-block;
-    width: 25%;
-    margin-left: 10px;
-    text-align: left;
+    width: 20%;
+    padding-right: 5px;
+    text-align: right;
     word-spacing: 0;
     letter-spacing: 0px;
 }
@@ -316,17 +319,22 @@ p, span, div {
     border-radius:20px;
     border: 4px solid #222;
     cursor: pointer;
+	-webkit-transition: all 150ms eease-out;
 }
 span[data-color=gradient] {
     background: -webkit-linear-gradient(#0081d3, #e44211);
-    border: 0;
     height: 14px;
     width: 14px;
     border: 4px solid #222;
+	-webkit-transition: all 150ms eease-out;
+}
+.color span:hover, span[data-color=gradient]:hover { 
+	 border: 4px solid #333;
 }
 /* Credits Button */
  .btn {
     border: 2px solid #222;
+    border-radius: 2px;
     background: #333;
     color: white;
     -webkit-transition: 150ms ease background;
