--- a/css/style.css
+++ b/css/style.css
@@ -82,12 +82,14 @@ html {
 .ui-listview-item,
 .ui-collapsible-header {
 	text-decoration: none;
+/*
 	box-shadow: 0px 1px 0px rgba(255,255,255,.05) inset;
+*/
 	background-color: #151515;
 	font-size: 14px;
 	color: #999;
     letter-spacing: -1px;
-    border-bottom: 1px solid #0A0A0A;
+    border-bottom: 1px solid #0F0F0F;
 	-webkit-transition: all 0.2s ease-in-out;
 }
 
@@ -95,7 +97,9 @@ html {
     color: #ddd;
     vertical-align:middle;
     padding: 3px 20px 3px 20px;
+/*
     box-shadow: 0 1px 0 rgba(255,255,255,.1) inset;
+*/
     background-image: -webkit-linear-gradient(#444 0%, #333 100%);
     border-top: 1px solid #111;
     border-bottom: 1px solid #111;
@@ -111,7 +115,9 @@ html {
 .ui-collapsible-header-top {
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
+/*
     box-shadow: 0px -1px 1px #0A0A0A;
+*/
 }
 
 .ui-listview-last-child,
@@ -183,7 +189,9 @@ span {
     padding: 5px 0 5px 0;
     line-height: 1;
     border-radius: 10px;
+/*
     box-shadow: 0 1px 0 rgba(255,255,255,0.1) inset;
+*/
     background-image: -webkit-linear-gradient(#111 0%, #111 100%);
     text-shadow: 0 -1px 1px #000;
     /*border-bottom: 1px solid #222;*/
@@ -194,7 +202,9 @@ span {
 }
 
 .ui-button:hover {
+/*
     box-shadow: 0 1px 0 rgba(255,255,255,.1) inset;
+*/
     background-image: -webkit-linear-gradient(#222222 0%, #1A1A1A 100%);
     color: #ddd;
 }
@@ -225,7 +235,9 @@ span {
     white-space: nowrap; 
 
     -webkit-transition: margin-bottom 0.3s, bottom 0.2s ease-out;
+/*
     -webkit-box-shadow: 0 -1px 1px black;
+*/
 }
 
 #userAccount:hover {
@@ -329,7 +341,9 @@ span {
 	padding: 0px;
 	width: 240px;
 	height: auto;
+/*
 	box-shadow: 0px -1px 1px #060606;
+*/
 }
 .filterform {
 	width: 260px;
@@ -340,14 +354,14 @@ span {
 	background-color: transparent;
 }
 .filterinput{
-	height:24px;
+	height:28px;
 	width:240px;
 	padding:4px 15px 4px 30px;
 	margin:0px;
 	background: #222 url("../img/search.png") no-repeat center left 8px;
 	background-size:18px 18px;
 	border-radius:40px;
-	border: transparent;
+	border:2px solid #0F0F0F;
 	color:#aaa;
 	font-size:12px;
 }
