--- a/css/style.css
+++ b/css/style.css
@@ -82,14 +82,12 @@ html {
 .ui-listview-item,
 .ui-collapsible-header {
 	text-decoration: none;
-/*
-	box-shadow: 0px 1px 0px rgba(255,255,255,.05) inset;
-*/
+/*	box-shadow: 0px 1px 0px rgba(255,255,255,.05) inset;*/
 	background-color: #151515;
 	font-size: 14px;
 	color: #999;
-    letter-spacing: -1px;
-    border-bottom: 1px solid #0F0F0F;
+   letter-spacing: -1px;
+/* border-bottom: 1px solid #0F0F0F;*/
 	-webkit-transition: all 0.2s ease-in-out;
 }
 
@@ -99,8 +97,9 @@ html {
     padding: 3px 20px 3px 20px;
 /*
     box-shadow: 0 1px 0 rgba(255,255,255,.1) inset;
-*/
     background-image: -webkit-linear-gradient(#444 0%, #333 100%);
+*/
+    background:#333;
     border-top: 1px solid #111;
     border-bottom: 1px solid #111;
 }
