--- a/css/bevel.css
+++ b/css/bevel.css
@@ -189,13 +189,13 @@
 }
 #time {
 	position: fixed;
-	background: #1a1a1a;
+	background: #111;
 	color: #bbb;
 	bottom: 0px;
 	padding: 5px 0 10px;
     cursor: default;
     text-align: center;
-    border-top: 1px solid #000;
+    border-top: 1px solid #0C0C0C;
 }
 #clock-time {
 	width: 260px;
