--- a/css/bevel.css
+++ b/css/bevel.css
@@ -75,7 +75,7 @@
 	position:absolute;
 	width: 32px;
 	height: 32px;
-	margin-top:-30px;
+	margin-top:-31px;
 	margin-left:-22px;
 	padding: 5px;
 	float:center;
@@ -189,7 +189,7 @@
 }
 #time {
 	position: fixed;
-	background: #111;
+	background: #1a1a1a;
 	color: #bbb;
 	bottom: 0px;
 	padding: 5px 0 10px;
