--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ html {
     cursor: pointer;
     padding: 5px 6px 0px 12px;
     margin: 0px;
+    white-space: nowrap;
     overflow:hidden;
     text-overflow:ellipsis;
 }
@@ -83,9 +84,9 @@ html {
 	text-decoration: none;
 	background-color: #151515;
 	font-family: 'Aurulent Sans';
-	font-size: 0.85em;
+	font-size: 0.8em;
 	color: #aaa;
-	line-height: 19px;
+	line-height: 22px;
 	letter-spacing: 0px;
 	border-bottom: thin solid #0f0f0f;
 	-webkit-transition: all 0.1s ease-in-out;
